<resources>
    <string name="app_name">Swastik</string>
    <string name="swastik_college">Swastik College</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="image">image</string>

    <!--menu items-->
    <string name="faculty">Faculty</string>
    <string name="gallery">Gallery</string>
    <string name="programs">Programs</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="title_activity_maps">Map</string>
    <string name="locate_us">Locate Us</string>
    <string name="www_swastik_edu_np">www.swastik.edu.np</string>
    <string name="info_swastik_edu_np">info@swastik.edu.np</string>
    <string name="welcome_to_swastik_college">Welcome to Swastik College</string>
    <string name="phoneNumber1">+97716635174</string>
</resources>
