<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="?attr/colorPrimary" />

    <LinearLayout
        android:id="@+id/collegeDescriptionLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        android:background="?attr/colorPrimary"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:background="@mipmap/ic_launcher"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:padding="5dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_swastik_college"
            android:textColor="@color/white"
            android:padding="5dp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/collegePhoneLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@+id/collegeDescriptionLinearLayout"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:background="@color/backgroundGrey"
        android:weightSum="5">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_contact"/>

        <TextView
            android:id="@+id/collegePhone1TextView"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/phoneNumber1"/>

        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/collegePhone2TextView"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="+977"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/collegeEmailLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@+id/collegePhoneLinearLayout"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:background="@color/wallet_dim_foreground_inverse_disabled_holo_dark"
        android:weightSum="5">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_email"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/info_swastik_edu_np"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/collegeWebsiteLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@+id/collegeEmailLinearLayout"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:background="@color/backgroundGrey"
        android:weightSum="5">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_url"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/www_swastik_edu_np"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/collegeLocationLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical"
        android:layout_below="@+id/collegeWebsiteLinearLayout"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:background="@color/wallet_dim_foreground_inverse_disabled_holo_dark"
        android:weightSum="5">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Char Dobato, Gatthaghar"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bhaktapur, Nepal"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
